<resources>
    <string name="app_name">健康生活</string>
    <string name="action_settings">Settings</string>
    <string name="search">查询(＾－＾)</string>

    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="txt_hint_search">您想要查些什么呢o(*￣︶￣*)o</string>
    <string name="tv_searchContent">您可以查询资讯、图书、菜谱、食物、药品、疾病、手术、药企、医院、药店、农业、热点...</string>
    <string name="tv_searchKey">请输入您要查找内容的关键字：</string>
    <string name="tv_isNetworkAvailable">您目前没有连接网络,点击我去连接网络？◕‿‿◕</string>
    <string name="cancel">取消</string>

    <string name="login">点击登录</string>
    <string name="login_bottom">签到分享，赚积分兑大奖</string>
    <string name="btn_signIn">签到</string>
    <string name="btn_share">分享</string>
    <string name="btn_shop">积分商城</string>
    <string name="btn_changeCity">切换城市</string>
    <string name="integral">积分大抽奖</string>
    <string name="btn_noticeboard">公告栏</string>
    <string name="btn_encourage">好评鼓励</string>
    <string name="btn_settings">设置</string>
    <string name="btn_confirm">确定</string>
    <string name="txt_exitLogin">登录</string>
    <string name="txt_phoneNum">手机号</string>
    <string name="txt_safeCode">验证码</string>
    <string name="btn_code">验证</string>
    <string name="btn_dialog">点击我弹框</string>
    <string name="btn_start">开始</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_stop">置零</string>
    <string name="btn_click">点击我</string>
    <string name="txt_otherMethod">——其他登录——</string>
    <string name="map_type_route">请选择出行方式：</string>
</resources>
