<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <include layout="@layout/title_classify"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fifteen"
        android:text="@string/tv_searchContent"
        android:textSize="@dimen/font_m"
        android:layout_marginTop="@dimen/ten"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fifteen"
        android:layout_marginTop="@dimen/ten"
        android:text="@string/tv_searchKey"
        android:textSize="@dimen/font_m" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="@dimen/ten"
        android:background="@color/title_green">

        <EditText
            android:id="@+id/txt_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="@dimen/forty"
            android:layout_marginTop="2dp"
            android:background="@android:color/white"
            android:hint="@string/txt_hint_search"
            android:paddingLeft="@dimen/ten"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/imgbtn_search"
            android:layout_width="@dimen/thirty"
            android:layout_height="@dimen/thirty"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/five"
            android:background="@drawable/ic_hint_search" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/healthimg"/>

        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/lv_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/fifteen"
            android:layout_marginRight="@dimen/fifteen"
            android:scrollbars="none" />
    </RelativeLayout>
</LinearLayout>